<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingTop="13.3dp"
    app:layout_scrollFlags="scroll">

    <LinearLayout
        android:id="@+id/ll_avatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        >

        <com.qingsongchou.library.widget.avatar.CircleImageView
            android:id="@+id/cv_avatar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@null"
            android:src="@mipmap/ic_avatar_default" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginStart="7dp"
                android:textColor="#4A4A4A"
                android:textSize="15sp"
                tools:text="@string/app_name" />

            <TextView
                android:id="@+id/tv_rate_avg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="3dp"
                android:textColor="#9B9B9B"
                android:textSize="13sp"
                tools:text="@string/comment_project_detail_user_rate" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_project_detail_sale_header_contact"
            android:paddingBottom="8dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="8dp"
            android:text="@string/project_detail_consult"
            android:textColor="#43AC43"
            android:textSize="15sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_marginTop="13dp"
        android:background="@color/common_big_divider" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:lineSpacingExtra="3dp"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:textColor="#333"
        android:textSize="17sp"
        tools:text="众筹二期 云南高原-沅江太阳谷牛奶第二期 云南高原" />

    <TextView
        android:id="@+id/tv_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:textColor="#333"
        android:textSize="12sp"
        tools:text="剩余3天" />

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/simpleProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="18dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:src="@mipmap/ic_project_detail_life1" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:src="@mipmap/ic_project_detail_target_money" />


        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:src="@mipmap/ic_project_detail_life2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11.3dp"
        android:orientation="horizontal"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/project_detail_total_amount"
            android:textColor="#aaa"
            android:textSize="13sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/project_detail_current_amount"
            android:textColor="#aaa"
            android:textSize="13sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/project_detail_backed_count"
            android:textColor="#aaa"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        >

        <TextView
            android:id="@+id/tv_total_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/app_init_money_default"
            android:textColor="#F25B4B"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_current_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/app_init_money_default"
            android:textColor="#F25B4B"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_backed_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/app_init_time_default"
            android:textColor="#F25B4B"
            android:textSize="15sp" />

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="20.6dp"
        android:background="@color/common_divider" />

    <LinearLayout
        android:id="@+id/detailView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:drawableEnd="@mipmap/ic_project_detail_life3"
            android:drawablePadding="10dp"
            android:drawableRight="@mipmap/ic_project_detail_life3"
            android:gravity="center"
            android:text="@string/project_detail_view"
            android:textColor="@color/common_green"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/common_big_divider" />
</LinearLayout>