<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    app:layout_scrollFlags="scroll">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="13.3dp"
        android:paddingRight="13.3dp"
        android:text="@string/project_detail_shipping_label_first"
        android:textColor="#333"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/common_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="13.3dp"
        android:paddingRight="13.3dp"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/project_detail_shipping_label_second"
            android:textColor="#333"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_freight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#333"
            android:textSize="13sp"
            tools:text="15" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingLeft="13.3dp"
        android:paddingRight="13.3dp"
        android:paddingTop="15dp">

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/project_detail_shipping_label_third"
            android:textSize="13sp"
            android:textColor="#333"/>

        <TextView
            android:id="@+id/tv_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#333"
            android:textSize="13sp"
            tools:text="15" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/common_big_divider"
        android:contentDescription="@null" />

</LinearLayout>